# pyos-sphinx-theme

./: .all-contributorsrc  .buildinfo  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  develop.html  genindex.html  index.html  noxfile.py  objects.inv  package-lock.json  package.json  pyproject.toml  search.html  searchindex.js  showcase.html  use.html
.doctrees/: develop.doctree  environment.pickle  index.doctree  showcase.doctree  use.doctree
.github/workflows/: build-test.yml  build.yml  publish-pypi.yml  release.yml
_sources/: develop.md  showcase.md
_static/styles/: pyos-sphinx-theme.css  pyos-sphinx-theme.css.map
docs/: conf.py  develop.md  features.md  index.md  requirements.txt  showcase.md  use.md
src/pyos_sphinx_theme/: __init__.py  html2dirhtml.py  video.py
src/pyos_sphinx_theme/assets/styles/: pyos-sphinx-theme.scss
src/pyos_sphinx_theme/assets/styles/abstract/: _variables.scss
src/pyos_sphinx_theme/assets/styles/base/: _base.scss  _typography.scss
src/pyos_sphinx_theme/assets/styles/components/: _card.scss  _icons.scss  _navbar.scss  _sidebar.scss
src/pyos_sphinx_theme/assets/styles/contents/: _admonitions.scss  _footnotes.scss  _tables.scss
src/pyos_sphinx_theme/assets/styles/fonts/: _fonts.scss
src/pyos_sphinx_theme/assets/styles/pages/: _lesson.scss  _tutorial.scss
src/pyos_sphinx_theme/assets/styles/sections/: _container.scss
src/pyos_sphinx_theme/theme/pyos-sphinx-theme/: theme.conf
src/pyos_sphinx_theme/theme/pyos-sphinx-theme/components/: 2i2c-content-footer.html
src/pyos_sphinx_theme/theme/pyos_sphinx_theme/: theme.conf
src/pyos_sphinx_theme/theme/pyos_sphinx_theme/static/styles/: pyos-sphinx-theme.css  pyos-sphinx-theme.css.map
src/pyos_sphinx_theme/theme/pyos_sphinx_theme/templates/: code_of_conduct.html
src/sphinx_2i2c_theme/: __init__.py  video.py
src/sphinx_2i2c_theme/assets/styles/base/: _typography.scss
src/sphinx_2i2c_theme/assets/styles/components/: _logo.scss  _support-button.scss
src/sphinx_2i2c_theme/assets/styles/sections/: _footer.scss  _header.scss  _sidebar-primary.scss
src/sphinx_2i2c_theme/theme/sphinx-2i2c-theme/: theme.conf
src/sphinx_2i2c_theme/theme/sphinx-2i2c-theme/components/: 2i2c-footer.html  2i2c-header-links.html  2i2c-logo.html  2i2c-support-button.html
