[build-system]
requires = ["hatchling", "hatch-vcs", "sphinx-theme-builder @ https://github.com/pradyunsg/sphinx-theme-builder/archive/87214d0671c943992c05e3db01dca997e156e8d6.zip",]
build-backend = "sphinx_theme_builder"

[tool.sphinx-theme-builder]
node-version = "16.13.2"
theme-name = "pyos_sphinx_theme"

[project]
name = "pyos-sphinx-theme"
description = "PyOS Documentation Theme."
dynamic = ["version"]
readme = "README.md"
authors = [{ name = "Leah Wasser", email = "leah@pyopensci.org" }]
maintainers = [
  { name = "pyOpenSci", email = "admin@pyopensci.org" }, # Optional
]

requires-python = ">=3.9"
dependencies = [
  "pydata-sphinx-theme==0.15.2",
  "sphinx",
  "myst_nb",
  "sphinxext-opengraph",
  "sphinx-copybutton",
  "sphinx-togglebutton",
  "sphinxext-opengraph>=0.8.0",
  "sphinx_design",
  "sphinx_sitemap",
]

license = { file = "LICENSE"}
classifiers = [
  "Framework :: Sphinx",
  "Framework :: Sphinx :: Theme",
  "License :: OSI Approved :: MIT License",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
]

[project.optional-dependencies]
dev = [
  'sphinx-theme-builder[cli] >= 0.2.0a7',
]

docs = [
  "myst-parser",
  "IPython",
]

[tool.hatch]
version.source = "vcs"

[project.entry-points."sphinx.html_themes"]
"pyos_sphinx_theme" = "pyos_sphinx_theme"

[tool.ruff]
line-length = 100
select = [
    "E",    # pycodestyle, see https://beta.ruff.rs/docs/rules/#pycodestyle-e-w
    "D",    # pydocstyle, see https://beta.ruff.rs/docs/rules/#pydocstyle-d
    "F",    # pyflakes, see https://beta.ruff.rs/docs/rules/#pyflakes-f
    "I",    # isort, see https://beta.ruff.rs/docs/rules/#isort-i
    "N",    # pep8-naming, see https://beta.ruff.rs/docs/rules/#pep8-naming-n
]
[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
